--- a/VRChat/83/1379983.html
+++ b/VRChat/83/1379983.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "sJ/OG57eUuvOvWn4L/+YJrRl3R7kgnxnbxCZQxJUdcU="></script>
+    "5iD5oWTvyQCl6B0SYSbfJA5CtZG3a1BR1ChLIUUunbE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"水着_SummerForMe【VRoid用テクスチャ】","description":"■商品説明\n・pixiv社提供の3Dモデリングソフト「VRoid Studio」で使用するテクスチャ素材です。\n・体テクスチャの追加レイヤーとして利用ください。\n・商品画像にあるモデルデータは含まれません。\n\n■内容物\n【水着】\n[水着_SummerForMe]\n　・bikini_SummerForMe_Black.png（黒）\n　・bikini_SummerForMe_Emerald.png（エメラルド）\n　・bikini_SummerForMe_Pastel.png（パステル）\n　・bikini_SummerForMe_PinkBlue.png（ピンク・青）\n　・bikini_SummerForMe_YellowGreen.png（黄・緑）\n　・bikini_SummerForMe_Butterfly.png（蝶）\n　・readme.txt\n[褐色肌テクスチャ]\n　・Body_Brown.png(体用)\n　・Face_Brown.png(顔用)\n\n【パレオ】\n[Pareo_UnityPackage]\n　・Pareo.unitypackage\n\n[導入例]\nhttps://hub.vroid.com/characters/7452778509712516837/models/8112052322939174549\n\n・UnitypackageはizmさんのVRChat向け”Unity着替え補助スクリプト”が同梱されています。使い方は以下URLを見てください。\nhttps://neon-izm.booth.pm/items/1273588\n\n・面数：700です。\n\n■利用規約\n↓こちらを参照してください。\nhttps://www.pixiv.net/member.php?id=1512738","url":"https://booth.pm/ja/items/1379983","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"500","highPrice":"1000"},"image":"https://booth.pximg.net/c/620x620/4644c3b8-7323-49ec-884d-8226954b89c6/i/1379983/3e55f473-2c12-4c64-8358-447e0e857678_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="sJ/OG57eUuvOvWn4L/+YJrRl3R7kgnxnbxCZQxJUdcU="></script>
+    nonce="5iD5oWTvyQCl6B0SYSbfJA5CtZG3a1BR1ChLIUUunbE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -795,9 +795,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
