--- a/VRChat/21/1316321.html
+++ b/VRChat/21/1316321.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "5KJdakLrP1WLpVRDYup1yb4ZtFXcLuIvBErFaaWhgzo="></script>
+    "YYdvATDuMDky6i/cFadkVIyNCuo6D31/3IXcYLGSC7Q="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"うんち【VRCポリゴン制限内！】","description":"【内容】\nUnityパッケージと69632ポリゴンと4928ポリゴンの二種のFBXデータ。あと、一応UV展開図が同封されています。\n【2019/4/26追記】\nレインボーカラーを追加しました！\n\n※本モデル及びデータを使用するに関して\n\n・基本的にVRchatでの利用を考えて制作しております。\n・UnityやVRchatへの導入方法はご理解頂けてる前提での販売となっております。\n（導入方法をご存知でない方は申し訳ありませんが検索をかける等ご自身で調べてください。\n・著作権は改変、未改変にかかわらず製作者「o-zora」に帰属します。\n・本モデル、データを利用によるいかなる損害に対する責任も製作者「o-zora」は責任を負いません。\n\n※OKなこと。許可項目。\n・モデル及びデータの改変。\n（他のモデルと組み合わせる場合はこちらからはOKです。組み合わせ先の規約をよくご確認ください。）\n・個人、サークル等によるゲームでの利用や動画などでの利用。及びそれらによる収益化。\n（法人の方は要相談）（また可能であれば動画等での利用の際クレジット表記してくれるとありがたいです）\n\n※ダメなこと。不可項目。\n・再配布、二次配布の禁止。改変後も不可。\n・元のモデルの自作発言を禁止します。\n・VRChatのアバターペデスタルでの利用は禁止します。\n・政治的活動、宗教活動、特定個人や団体への中傷を目的とした利用を禁止します。\n\n不明なこと、不具合、質問等ございましたら気軽にツイッターへご連絡ください。\nただ、Unity、Blender等の技術的な質問にはお答えしかねます。\n@analognihonnhei","url":"https://booth.pm/ja/items/1316321","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/173e5138-c18a-442d-a811-70459b0503fd/i/1316321/72520112-6ae4-4476-8110-9b686d5a1403_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="5KJdakLrP1WLpVRDYup1yb4ZtFXcLuIvBErFaaWhgzo="></script>
+    nonce="YYdvATDuMDky6i/cFadkVIyNCuo6D31/3IXcYLGSC7Q="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -472,9 +472,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
