--- a/VRChat/25/1316225.html
+++ b/VRChat/25/1316225.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "Z/2Oe9RV2HIFuQLWkkEekSCZ0ljL/SgvRipdL3W6I9c="></script>
+    "4kmDIXC/fNrr+wH4qbUAWCXPbPdxvWJ738wU/fQIJGA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRC用振り子時計","description":"VRChatで現実と同じ時間が表示される振り子時計です。\nマテリアルから色を自由に変更できます。\n短針、長針、しっぽが動きます。\nマテリアルのパラメータからしっぽの最大振れ角と速度を変更できます。\n振り子時計は頂点:318、面:161、三角面:616です。","url":"https://booth.pm/ja/items/1316225","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/4b1b28d8-4063-43f5-b63f-17e05ceab52f/i/1316225/a8dc704d-dcce-4986-8bc7-8ebcc7dfa89c_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Z/2Oe9RV2HIFuQLWkkEekSCZ0ljL/SgvRipdL3W6I9c="></script>
+    nonce="4kmDIXC/fNrr+wH4qbUAWCXPbPdxvWJ738wU/fQIJGA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -443,9 +443,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
