--- a/VRChat/71/1315471.html
+++ b/VRChat/71/1315471.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "9JXhWiV59agUGGkyLicTe5P4cBjzPuq/7OArJPNkFCk="></script>
+    "CEwCOtYVoC1/0msVuKOVzQn7AX+bYrvdoNH2APvcXZs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"『のらきゃっと』nora_cat_revolver『２歳誕生日記念モデル』","description":"のらきゃっとの２歳お誕生日をお祝いする記念モデルです。（ファンモデルです）\n\nのらきゃっとカラーだけでなく、ますきゃっとカラーもあるのでますきゃっとで楽しむこともできます！\n\nのらちゃん２歳おめでとう！\nのら！ちゃん！べりべりきゅーと！\n\n\n＊注意事項\n本モデルはファン同士での共有を目的として２次配布を許可していますが、販売は禁止です！　詳しくは規約のredomeを読んでください！\n\n量産型のらきゃっと\nhttps://noracat.booth.pm/items/1216498","url":"https://booth.pm/ja/items/1315471","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/9b92b4aa-727e-4ad3-8a66-111e77c11365/i/1315471/de73681f-2b75-420b-b458-06ccb9b6443a_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="9JXhWiV59agUGGkyLicTe5P4cBjzPuq/7OArJPNkFCk="></script>
+    nonce="CEwCOtYVoC1/0msVuKOVzQn7AX+bYrvdoNH2APvcXZs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -374,9 +374,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
