--- a/VRChat/46/1315946.html
+++ b/VRChat/46/1315946.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "HcNh+/6ihtkN9IMMDYb6whz8pGNBEC+TU7hJ9/fNe6A="></script>
+    "nMHdfk7u0kV5pfNgBgjZpB9jVKF3thDQd076COYmSBA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[VRChat用]拍手パーティクル V2.0","description":"拍手パーティクル\n拍手をするとパーティクルが出ます。\n相手も入れてると、ハイタッチが出来ます。\n\n20/5/29 v2.0にアップデート\n〇ゲームワールドで拍手が出来るようになりました\n〇自分の写真や鏡に拍手パーティクルが写るようになりました\n\n\n\n・アバターに組み込みで販売 ＯＫ(ペデスタルもＯＫ)\n・使用時に許可や記載などは一切不要\n・改変ＯＫ\n\n・同ファイルのみでの再配布・販売 ＮＧ\n・他人を不快にさせる行為 ＮＧ\n\n当パーティクルを使用して生じた損害について、当方は一切の責任を負いません。\n\n\n2019/4/14:マテリアル入れ忘れ修正・PDF誤字修正\n2020/5/29:v2.0公開 コンストレイントを使用するように変更\n\n\n技術協力：いすぃさん\n[いすぃのお店]\nhttps://isui31.booth.pm/\n面白いおもちゃあります\n\n\n説明に使用させて頂いているモデル\n\nモクモクランちゃん\n[クレープたべたい]\nhttps://booth.pm/ja/items/1271309\n角っ子かわいい！\n\nヤギコちゃん\n[sasaminbooth]\nhttps://booth.pm/ja/items/1076755\nヤギコちゃん is かわいい！\n\nバフォメっ子\n[もふもふ屋]\nhttps://booth.pm/ja/items/1848952\nけもかわいい！","url":"https://booth.pm/ja/items/1315946","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/246bd13d-a98e-42ee-96eb-5862ab9a9a79/i/1315946/c90d7a76-5f29-4230-9696-b18b436cc60c_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="HcNh+/6ihtkN9IMMDYb6whz8pGNBEC+TU7hJ9/fNe6A="></script>
+    nonce="nMHdfk7u0kV5pfNgBgjZpB9jVKF3thDQd076COYmSBA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -173,7 +173,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      985
+                                      984
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -189,7 +189,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      985
+                                      984
                                     </div>
                                   </div></a>
                                 </div>
@@ -391,9 +391,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
