--- a/VRChat/74/1315674.html
+++ b/VRChat/74/1315674.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "3RZH99o+AYaoPgwHKHBfr77jrNjbjWfM97pcs5Pj6Bw="></script>
+    "EI4PBd1/Z02a5i87iBQwV3s6pX7ZxBzSugLZVicWO4E="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"絆創膏","description":"【絆創膏】\n\nVRChat向け・小物アイテム\n\nポリゴン数\n　絆創膏：308\n　絆創膏_四角：536\n\n【内容】\n\n■readme.txt\n\n■絆創膏.unitypackage\n　→絆創膏モデル×２とそれぞれのテクスチャ、マテリアル\n　　各Prefab\n\n■モデル・テクスチャ改造用フォルダ\n　　□絆創膏.fbx\n　　□絆創膏.png\n　　□絆創膏(UV).png\n　　□絆創膏_四角.fbx\n　　□絆創膏_四角.png\n　　□絆創膏_四角(UV).png\n\n\n【シェイプキーについて】\n\n　「絆創膏」「絆創膏_四角」共にガーゼ部分の膨らみを設定するための\n　シェイプキーを設定しております。\n　シェイプキー「膨らみ」を増やすと膨らみが増します。\n　また、「絆創膏_四角」には曲面に合わせるようの「曲げ」を設定しております。\n　シェイプキー「曲げ」を増やすと絆創膏の左右が-z方向へ曲がります。\n\n【ボーンについて】\n\n　「絆創膏」には曲面に合わせるようのボーンが設定されています。\n　「絆創膏_四角」には上下左右斜めの８方向のボーンが設定されいます。\n　ご利用個所に合わせて微調整用にご利用ください。\n\n【使用方法】\nUnityに絆創膏.unitypackageをimportしてください。\n絆創膏をアバターにセットしご利用ください。\n\n【余談】\nテクスチャは絆創膏の両面分設定されています。\nその為、剥がした後の裏面の血痕なども再現可能です。\n\n【※注意事項】\n\n・このファイルを使用して発生したいかなるトラブルにも責任を負いかねます\n・改変等はご自由にどうぞ！\n・製作者を騙ることを禁止します。\n・モデルの再配布を禁止します。\n・良識の範囲でのご使用をお願い致します。\n・予告なく規約変更、配布停止、使用禁止にする事があります。\n\n制作者:土司空〈DOSHIKU〉\nhttps://twitter.com/airgaogao \n\nご不明な点、バグなどございましたらご連絡いただけますと幸いです。\n\n2019.04.13　販売開始\n","url":"https://booth.pm/ja/items/1315674","offers":{"priceCurrency":"JPY","@type":"Offer","price":"150"},"image":"https://booth.pximg.net/c/620x620/e201f4f8-6bc0-4319-ac66-863763d14127/i/1315674/738048c4-d90b-4f2d-8f65-4e6141696ce9_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="3RZH99o+AYaoPgwHKHBfr77jrNjbjWfM97pcs5Pj6Bw="></script>
+    nonce="EI4PBd1/Z02a5i87iBQwV3s6pX7ZxBzSugLZVicWO4E="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -489,9 +489,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
